# test-task

./: .env.example  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
src/accounts/: models.py  serializers.py  urls.py
src/accounts/api_views/: GetUserAPI.py  LoginAPI.py  LogoutAPIView.py  RegisterAPI.py  __init__.py
src/accounts/migrations/: 0001_initial.py  0002_usermodel_age.py
src/main/: settings.py  urls.py
src/post_publisher/: app.py  tasks.py
src/posts/: admin.py  helpers.py  models.py  pagination.py  serializers.py  urls.py
src/posts/api_views/: CommendsViewSet.py  FilesViewSet.py  PostModelViewSet.py  __init__.py
src/posts/migrations/: 0001_initial.py
src/scripts/: run-celery.sh  run-server.sh
src/swagger/: urls.py  views.py
src/swagger/static/docs/: index.yaml  models.yaml
src/swagger/static/docs/accounts/: paths.yaml  responses.yaml
src/swagger/templates/swagger/: index.html
