[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["konzamir <konzamir@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.5"
django = "^2.2"
djangorestframework = "^3.10"
django-rest-knox = "^4.1"
mysqlclient = "^1.4"
django-cors-headers = "^3.1"
requests = "^2.22"
django-mptt = "^0.10.0"
python-dotenv = "^0.10.3"
celery = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
